--- a/index.css
+++ b/index.css
@@ -8,6 +8,7 @@ body {
   color: rgb(128, 0, 107);
   font-family: "Trebuchet MS", sans-serif;
 }
+/* header styling */
 header {
   background-color: #5c0564;
   padding: 10px 0;
